# agent-family-attache

./: .gitignore  pyproject.toml
infrastructure/: .gitignore  .infisical.json  .terraform.lock.hcl  README.md  gmail.tf  project.auto.tfvars  providers.tf  terraform.tf  vars.tf
lib/shared/: pyproject.toml
services/agent_core/: pyproject.toml
services/data_connectors/: pyproject.toml
services/data_connectors/src/gmail/: __init__.py  oauth_credentials_factory.py
services/data_connectors/tests/: test_oauth_credentials_factory.py
services/mcp_server/: README.md  main.py  pyproject.toml
services/web_ui/: pyproject.toml
shared/infisical/: .env.example  README.md  pyproject.toml
shared/infisical/src/common/client_utils/: __init__.py
shared/infisical/src/common/clients/: __init__.py  wrapper.py
shared/infisical/src/common/infisical_client/: __init__.py  api_settings.py  client.py
shared/infisical/tests/: test_client.py
